--- a/css/styles.css
+++ b/css/styles.css
@@ -501,6 +501,7 @@ a.check-out:hover, a.check-out:active,
         box-shadow: none;
     }
 a.check-out {
+    height: 40px;
     padding: 8px 18px;
     margin-top: 10px;
     margin-right: 8px;
@@ -517,6 +518,7 @@ a.check-out {
 }
 
 a.check-out:hover {
+    
     padding-bottom: 6px;
     background: hsla(190, 79%, 27%, 1);
     background: linear-gradient(90deg, var(--CheckGradColor2) 20%, var(--CheckGradColor1) 100%);
@@ -529,6 +531,7 @@ a.check-out:hover {
 }
 
 a.resume {
+    height: 40px;
     padding: 8px 18px;
     margin-top: 10px;
     /* margin-left: 8px; */
